cmake_minimum_required(VERSION 3.19)
project(OJ_Solution)

set(CMAKE_CXX_STANDARD 14)

add_executable(OJ_Solution
        Algorithm/BigInteger.cpp
        LOJ/10018.cpp
        LOJ/10028.cpp
        LOJ/2653.cpp
        Luogu/AT1350.cpp
        Luogu/AT176.cpp
        Luogu/AT4242.cpp
        Luogu/CF1062B.cpp
        Luogu/CF1101B.cpp
        Luogu/CF1146B.cpp
        Luogu/CF121A.cpp
        Luogu/CF14C.cpp
        Luogu/CF171B.cpp
        Luogu/CF192A.cpp
        Luogu/CF260A.cpp
        Luogu/CF26B.cpp
        Luogu/CF34C.cpp
        Luogu/CF377A.cpp
        Luogu/CF399B.cpp
        Luogu/CF45D.cpp
        Luogu/CF485A.cpp
        Luogu/CF490B.cpp
        Luogu/CF496A.cpp
        Luogu/CF4C.cpp
        Luogu/CF550A.cpp
        Luogu/CF585B.cpp
        Luogu/CF616C.cpp
        Luogu/CF675A.cpp
        Luogu/CF70A.cpp
        Luogu/CF762A.cpp
        Luogu/CF762B.cpp
        Luogu/CF807A.cpp
        Luogu/CF858A.cpp
        Luogu/CF864D.cpp
        Luogu/CF866A.cpp
        Luogu/CF870C.cpp
        Luogu/CF897B.cpp
        Luogu/CF900B.cpp
        Luogu/CF92B.cpp
        Luogu/CF977D.cpp
        Luogu/CF988C.cpp
        Luogu/CF989C.cpp
        Luogu/CF991B.cpp
        Luogu/P1013.cpp
        Luogu/P1017.cpp
        Luogu/P1022.cpp
        Luogu/P1025.cpp
        Luogu/P1062.cpp
        Luogu/P1080.cpp
        Luogu/P1088.cpp
        Luogu/P1090.cpp
        Luogu/P1093.cpp
        Luogu/P1098.cpp
        Luogu/P1106.cpp
        Luogu/P1124.cpp
        Luogu/P1126.cpp
        Luogu/P1134.cpp
        Luogu/P1135.cpp
        Luogu/P1154.cpp
        Luogu/P1159.cpp
        Luogu/P1160.cpp
        Luogu/P1164.cpp
        Luogu/P1167.cpp
        Luogu/P1168.cpp
        Luogu/P1175.cpp
        Luogu/P1189.cpp
        Luogu/P1205.cpp
        Luogu/P1209.cpp
        Luogu/P1219.cpp
        Luogu/P1230.cpp
        Luogu/P1238.cpp
        Luogu/P1239.cpp
        Luogu/P1332.cpp
        Luogu/P1363.cpp
        Luogu/P1434.cpp
        Luogu/P1440.cpp
        Luogu/P1443.cpp
        Luogu/P1509.cpp
        Luogu/P1510.cpp
        Luogu/P1512.cpp
        Luogu/P1530.cpp
        Luogu/P1531.cpp
        Luogu/P1549.cpp
        Luogu/P1572.cpp
        Luogu/P1617.cpp
        Luogu/P1619.cpp
        Luogu/P1627.cpp
        Luogu/P1631.cpp
        Luogu/P1729.cpp
        Luogu/P1746.cpp
        Luogu/P1747.cpp
        Luogu/P1776.cpp
        Luogu/P1786.cpp
        Luogu/P1801.cpp
        Luogu/P1825.cpp
        Luogu/P1832.cpp
        Luogu/P1833.cpp
        Luogu/P1835.cpp
        Luogu/P1836.cpp
        Luogu/P1851.cpp
        Luogu/P1865.cpp
        Luogu/P1877.cpp
        Luogu/P1886.cpp
        Luogu/P2032.cpp
        Luogu/P2074.cpp
        Luogu/P2085.cpp
        Luogu/P2094.cpp
        Luogu/P2104.cpp
        Luogu/P2158.cpp
        Luogu/P2199.cpp
        Luogu/P2240.cpp
        Luogu/P2249.cpp
        Luogu/P2261.cpp
        Luogu/P2298.cpp
        Luogu/P2386.cpp
        Luogu/P2388.cpp
        Luogu/P2397.cpp
        Luogu/P2399.cpp
        Luogu/P2424.cpp
        Luogu/P2563.cpp
        Luogu/P2655.cpp
        Luogu/P2699.cpp
        Luogu/P2759.cpp
        Luogu/P2777.cpp
        Luogu/P2895.cpp
        Luogu/P2947.cpp
        Luogu/P3167.cpp
        Luogu/P3395.cpp
        Luogu/P3456.cpp
        Luogu/P3719.cpp
        Luogu/P3818.cpp
        Luogu/P3912.cpp
        Luogu/P3935.cpp
        Luogu/P3956.cpp
        Luogu/P4446.cpp
        Luogu/P4447.cpp
        Luogu/P4772.cpp
        Luogu/P4863.cpp
        Luogu/P4994.cpp
        Luogu/P4995.cpp
        Luogu/P5143.cpp
        Luogu/P5461.cpp
        Luogu/P5535.cpp
        Luogu/P5635.cpp
        Luogu/P5682.cpp
        Luogu/P5730.cpp
        Luogu/P5788.cpp
        Luogu/P6850.cpp
        Luogu/P7257.cpp
        Luogu/P7573.cpp
        Luogu/SP22403.cpp
        Luogu/SP245.cpp
        Luogu/SP288.cpp
        Luogu/SP3442.cpp
        Luogu/SP4141.cpp
        Luogu/SP4942.cpp
        Luogu/SP6471.cpp
        Luogu/UVA10140.cpp
        Luogu/UVA10179.cpp
        Luogu/UVA10299.cpp
        Luogu/UVA10539.cpp
        Luogu/UVA10763.cpp
        Luogu/UVA1152.cpp
        Luogu/UVA11526.cpp
        Luogu/UVA12100.cpp
        Luogu/UVA13279.cpp
        Luogu/UVA1644.cpp
        Luogu/UVA294.cpp
        Luogu/UVA439.cpp
        Luogu/UVA495.cpp
        Luogu/UVA524.cpp
        Luogu/UVA572.cpp
        Template/bits/stdc++.h
        Template/Template.cpp
        "tempInvwithO(n).cpp"
        tempMillerRabin.cpp
        test.cpp Luogu/P1015.cpp Luogu/P1028.cpp Luogu/P1012.cpp Luogu/P1010.cpp Luogu/P1011.cpp NOIOJ/1007.cpp Luogu/P1051.cpp Luogu/P1036.cpp Luogu/P1003.cpp Luogu/P1079.cpp Luogu/P1024.cpp)

# add_executable(P2026 Luogu/P2026.cpp)