cmake_minimum_required(VERSION 3.19)
project(solution)
set(CMAKE_CXX_STANDARD 11)
add_executable(solution ./AtCoder/AT1350.cpp
        ./AtCoder/AT176.cpp
        ./AtCoder/AT4242.cpp
        ./Codeforces/CF1062B.cpp
        ./Codeforces/CF1101B.cpp
        ./Codeforces/CF1139A.cpp
        ./Codeforces/CF1146B.cpp
        ./Codeforces/CF121A.cpp
        ./Codeforces/CF14C.cpp
        ./Codeforces/CF171B.cpp
        ./Codeforces/CF192A.cpp
        ./Codeforces/CF260A.cpp
        ./Codeforces/CF26B.cpp
        ./Codeforces/CF34C.cpp
        ./Codeforces/CF377A.cpp
        ./Codeforces/CF399B.cpp
        ./Codeforces/CF45D.cpp
        ./Codeforces/CF485A.cpp
        ./Codeforces/CF490B.cpp
        ./Codeforces/CF496A.cpp
        ./Codeforces/CF4C.cpp
        ./Codeforces/CF519B.cpp
        ./Codeforces/CF550A.cpp
        ./Codeforces/CF585B.cpp
        ./Codeforces/CF616C.cpp
        ./Codeforces/CF675A.cpp
        ./Codeforces/CF70A.cpp
        ./Codeforces/CF762A.cpp
        ./Codeforces/CF762B.cpp
        ./Codeforces/CF807A.cpp
        ./Codeforces/CF858A.cpp
        ./Codeforces/CF864D.cpp
        ./Codeforces/CF866A.cpp
        ./Codeforces/CF870C.cpp
        ./Codeforces/CF897B.cpp
        ./Codeforces/CF900B.cpp
        ./Codeforces/CF92B.cpp
        ./Codeforces/CF977D.cpp
        ./Codeforces/CF988C.cpp
        ./Codeforces/CF989C.cpp
        ./Codeforces/CF991B.cpp
        ./LOJ/10018.cpp
        ./LOJ/10028.cpp
        ./LOJ/2653.cpp
        ./Luogu/B2001.cpp
        ./Luogu/B2002.cpp
        ./Luogu/B2003.cpp
        ./Luogu/B2004.cpp
        ./Luogu/B2005.cpp
        ./Luogu/B2006.cpp
        ./Luogu/B2007.cpp
        ./Luogu/B2008.cpp
        ./Luogu/B2009.cpp
        ./Luogu/B2010.cpp
        ./Luogu/P1003.cpp
        ./Luogu/P1010.cpp
        ./Luogu/P1011.cpp
        ./Luogu/P1012.cpp
        ./Luogu/P1013.cpp
        ./Luogu/P1015.cpp
        ./Luogu/P1017.cpp
        ./Luogu/P1022.cpp
        ./Luogu/P1024.cpp
        ./Luogu/P1025.cpp
        ./Luogu/P1028.cpp
        ./Luogu/P1036.cpp
        ./Luogu/P1051.cpp
        ./Luogu/P1062.cpp
        ./Luogu/P1079.cpp
        ./Luogu/P1080.cpp
        ./Luogu/P1088.cpp
        ./Luogu/P1090.cpp
        ./Luogu/P1093.cpp
        ./Luogu/P1098.cpp
        ./Luogu/P1100.cpp
        ./Luogu/P1102.cpp
        ./Luogu/P1105.cpp
        ./Luogu/P1106.cpp
        ./Luogu/P1124.cpp
        ./Luogu/P1126.cpp
        ./Luogu/P1134.cpp
        ./Luogu/P1135.cpp
        ./Luogu/P1145.cpp
        ./Luogu/P1147.cpp
        ./Luogu/P1149.cpp
        ./Luogu/P1154.cpp
        ./Luogu/P1157.cpp
        ./Luogu/P1159.cpp
        ./Luogu/P1160.cpp
        ./Luogu/P1162.cpp
        ./Luogu/P1163.cpp
        ./Luogu/P1164.cpp
        ./Luogu/P1167.cpp
        ./Luogu/P1168.cpp
        ./Luogu/P1175.cpp
        ./Luogu/P1189.cpp
        ./Luogu/P1205.cpp
        ./Luogu/P1209.cpp
        ./Luogu/P1219.cpp
        ./Luogu/P1230.cpp
        ./Luogu/P1238.cpp
        ./Luogu/P1239.cpp
        ./Luogu/P1332.cpp
        ./Luogu/P1363.cpp
        ./Luogu/P1434.cpp
        ./Luogu/P1440.cpp
        ./Luogu/P1443.cpp
        ./Luogu/P1509.cpp
        ./Luogu/P1510.cpp
        ./Luogu/P1512.cpp
        ./Luogu/P1530.cpp
        ./Luogu/P1531.cpp
        ./Luogu/P1549.cpp
        ./Luogu/P1571.cpp
        ./Luogu/P1572.cpp
        ./Luogu/P1579.cpp
        ./Luogu/P1617.cpp
        ./Luogu/P1619.cpp
        ./Luogu/P1627.cpp
        ./Luogu/P1631.cpp
        ./Luogu/P1678.cpp
        ./Luogu/P1729.cpp
        ./Luogu/P1746.cpp
        ./Luogu/P1747.cpp
        ./Luogu/P1776.cpp
        ./Luogu/P1786.cpp
        ./Luogu/P1801.cpp
        ./Luogu/P1825.cpp
        ./Luogu/P1832.cpp
        ./Luogu/P1833.cpp
        ./Luogu/P1835.cpp
        ./Luogu/P1836.cpp
        ./Luogu/P1851.cpp
        ./Luogu/P1865.cpp
        ./Luogu/P1877.cpp
        ./Luogu/P1886.cpp
        ./Luogu/P1927.cpp
        ./Luogu/P2026.cpp
        ./Luogu/P2032.cpp
        ./Luogu/P2074.cpp
        ./Luogu/P2085.cpp
        ./Luogu/P2094.cpp
        ./Luogu/P2104.cpp
        ./Luogu/P2158.cpp
        ./Luogu/P2199.cpp
        ./Luogu/P2240.cpp
        ./Luogu/P2249.cpp
        ./Luogu/P2261.cpp
        ./Luogu/P2298.cpp
        ./Luogu/P2386.cpp
        ./Luogu/P2388.cpp
        ./Luogu/P2397.cpp
        ./Luogu/P2399.cpp
        ./Luogu/P2424.cpp
        ./Luogu/P2548.cpp
        ./Luogu/P2563.cpp
        ./Luogu/P2655.cpp
        ./Luogu/P2692.cpp
        ./Luogu/P2699.cpp
        ./Luogu/P2759.cpp
        ./Luogu/P2777.cpp
        ./Luogu/P2895.cpp
        ./Luogu/P2947.cpp
        ./Luogu/P3167.cpp
        ./Luogu/P3395.cpp
        ./Luogu/P3456.cpp
        ./Luogu/P3719.cpp
        ./Luogu/P3818.cpp
        ./Luogu/P3912.cpp
        ./Luogu/P3926.cpp
        ./Luogu/P3935.cpp
        ./Luogu/P3956.cpp
        ./Luogu/P4446.cpp
        ./Luogu/P4447.cpp
        ./Luogu/P4710.cpp
        ./Luogu/P4772.cpp
        ./Luogu/P4863.cpp
        ./Luogu/P4994.cpp
        ./Luogu/P4995.cpp
        ./Luogu/P5143.cpp
        ./Luogu/P5461.cpp
        ./Luogu/P5535.cpp
        ./Luogu/P5635.cpp
        ./Luogu/P5682.cpp
        ./Luogu/P5730.cpp
        ./Luogu/P5788.cpp
        ./Luogu/P6850.cpp
        ./Luogu/P7257.cpp
        ./Luogu/P7573.cpp
        ./Luogu/P7588.cpp
        ./NOIOJ/1007.cpp
        ./SPOJ/SP22403.cpp
        ./SPOJ/SP245.cpp
        ./SPOJ/SP288.cpp
        ./SPOJ/SP3442.cpp
        ./SPOJ/SP4141.cpp
        ./SPOJ/SP4942.cpp
        ./SPOJ/SP6471.cpp
        ./UVa/UVA10140.cpp
        ./UVa/UVA10179.cpp
        ./UVa/UVA10299.cpp
        ./UVa/UVA10340.cpp
        ./UVa/UVA10474.cpp
        ./UVa/UVA10539.cpp
        ./UVa/UVA10763.cpp
        ./UVa/UVA1152.cpp
        ./UVa/UVA11526.cpp
        ./UVa/UVA12100.cpp
        ./UVa/UVA1225.cpp
        ./UVa/UVA12412.cpp
        ./UVa/UVA13279.cpp
        ./UVa/UVA133.cpp
        ./UVa/UVA1339.cpp
        ./UVa/UVA1368.cpp
        ./UVa/UVA1585.cpp
        ./UVa/UVA1586.cpp
        ./UVa/UVA1644.cpp
        ./UVa/UVA213.cpp
        ./UVa/UVA220.cpp
        ./UVa/UVA227.cpp
        ./UVa/UVA232.cpp
        ./UVa/UVA253.cpp
        ./UVa/UVA294.cpp
        ./UVa/UVA439.cpp
        ./UVa/UVA455.cpp
        ./UVa/UVA489.cpp
        ./UVa/UVA495.cpp
        ./UVa/UVA512.cpp
        ./UVa/UVA524.cpp
        ./UVa/UVA572.cpp
        UVa/UVA101.cpp
        UVa/UVA10815.cpp
        UVa/UVA165.cpp UVa/UVA12096.cpp UVa/UVA540.cpp UVa/UVA136.cpp Algorithm/BigInteger.h Algorithm/BigInteger.cpp UVa/UVA400.cpp UVa/UVA1592.cpp UVa/UVA207.cpp DataGenerator/dg_uva207.cpp Luogu/P3693.cpp Luogu/P1313.cpp Luogu/P1962.cpp Luogu/P1306.cpp UVa/UVA210.cpp UVa/UVa514.cpp UVa/UVa442.cpp UVa/UVa11988.cpp UVa/UVa12657.cpp UVa/UVa679.cpp UVa/UVa122.cpp UVa/UVa548.cpp UVa/UVa839.cpp UVa/UVa699.cpp UVa/UVa297.cpp DataGenerator/dg_uva297.cpp UVa/UVa1103.cpp UVa/UVa816.cpp UVa/UVa10305.cpp UVa/UVa10129.cpp UVa/UVa10562.cpp UVa/UVa12171.cpp UVa/UVa814.cpp UVa/UVa221.cpp UVa/UVa1572.cpp UVa/UVa1599.cpp UVa/UVa506.cpp UVa/UVa673.cpp UVa/UVa536.cpp Luogu/P1030.cpp Luogu/P1827.cpp UVa/UVa1600.cpp UVa/UVa12166.cpp UVa/UVa804.cpp UVa/UVa806.cpp Algorithm/base_convert.cpp Luogu/P1540.cpp Luogu/P2347.cpp Luogu/P2196.cpp Luogu/P1091.cpp Luogu/P1020.cpp Luogu/P1970.cpp UVa/UVA11462.cpp UVa/UVA11995.cpp UVa/UVA11991.cpp LA/3135.cpp
        LA/3644.cpp LA/3027.cpp LA/4329.cpp Luogu/P2357.cpp Luogu/P3374.cpp Luogu/P3368.cpp Luogu/P3373.cc Luogu/P3611.cpp Luogu/P2574.cc Luogu/P5057.cc UVa/UVA11461.cpp UVa/UVA11538.cc UVa/UVA11136.cc LA/4487.cc Luogu/P2580.cc UVa/UVA11488.cc UVa/UVa11137.cc UVa/UVa11732.cc Luogu/P3375.cc Luogu/P4391.cc Luogu/P4824.cc UVa/UVa11992.cc Luogu/P1119.cc
        Luogu/P3371.cc Luogu/P1629.cpp Luogu/P1144.cpp)
